# zowie

./: .gitignore  CHANGES.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SUPPORT.md  _config.yml  codemeta.json  index.md  pyinstaller-darwin.spec  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: codacy-analysis.yml  codeql-analysis.yml
_layouts/: default.html
dev/icon/: README.md  zowie-icon.icns
dev/scripts/: create-pyz
tests/: test_exceptions.py  test_exit_codes.py  test_keyring_utils.py
zowie/: __init__.py  __main__.py  exceptions.py  keyring_utils.py  main_body.py  zotero.py
zowie/methods/: __init__.py  base.py  findercomment.py  pdfproducer.py  pdfsubject.py  wherefrom.py
zuppa/: __init__.py  __main__.py  exceptions.py  keyring_utils.py  main_body.py  zotero.py  zotero_utils.py
zuppa/methods/: __init__.py  base.py  findercomment.py  pdfproducer.py  pdfsubject.py  wherefrom.py
zupper/: __init__.py  __main__.py  main_body.py
